// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build simple: rollup cjs 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var React = require('react');
var cn = require('clsx');

function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e : { 'default': e }; }

var React__default = /*#__PURE__*/_interopDefaultLegacy(React);
var cn__default = /*#__PURE__*/_interopDefaultLegacy(cn);

var name = \\"alice\\";
var data = {
  name: name
};

var classes = {\\"container\\":\\"ghc-container\\",\\"name\\":\\"ghc-name\\"};

function Greet(props) {
    var _a = props.name, name = _a === void 0 ? 'world' : _a;
    return (React__default[\\"default\\"].createElement(\\"div\\", { className: cn__default[\\"default\\"](classes.container) },
        \\"Hello, \\",
        React__default[\\"default\\"].createElement(\\"span\\", { className: cn__default[\\"default\\"](classes.name) }, name),
        \\"!\\"));
}

var index = (function () { return React__default[\\"default\\"].createElement(Greet, { name: data.name }); });

exports.Greet = Greet;
exports[\\"default\\"] = index;
"
`;

exports[`build simple: rollup cjs 2`] = `
Object {
  "fileName": "index.css",
  "name": undefined,
  "source": "/**
 * @see https://developers.google.com/fonts/docs/getting_started
 */
@font-face {
  font-family: 'Tangerine';
  font-style: normal;
  font-weight: 400;
  src: local('Tangerine Regular'), local('Tangerine-Regular'), url(\\"../assets/font/tangerine.woff2\\") format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
.ghc-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 300px;
  height: 450px;
  margin: auto;
  background-image: url(\\"../assets/image/background.jpeg\\");
  background-size: contain;
  background-repeat: no-repeat;
}
.ghc-container .ghc-name {
  flex: 1 1;
  font-family: 'Tangerine', 'Comic Sans', serif;
  font-size: 48px;
  text-shadow: 4px 4px 4px #1a1a1a;
  color: #1a1a1a;
  padding: 1rem 2rem;
  white-space: nowrap;
}
.ghc-container .ghc-name ::-moz-placeholder {
  color: #808080;
}
.ghc-container .ghc-name ::placeholder {
  color: #808080;
}
",
  "type": "asset",
}
`;

exports[`build simple: rollup es 1`] = `
"import React from 'react';
import cn from 'clsx';

var name = \\"alice\\";
var data = {
  name: name
};

var classes = {\\"container\\":\\"ghc-container\\",\\"name\\":\\"ghc-name\\"};

function Greet(props) {
    var _a = props.name, name = _a === void 0 ? 'world' : _a;
    return (React.createElement(\\"div\\", { className: cn(classes.container) },
        \\"Hello, \\",
        React.createElement(\\"span\\", { className: cn(classes.name) }, name),
        \\"!\\"));
}

var index = (function () { return React.createElement(Greet, { name: data.name }); });

export { Greet, index as default };
"
`;

exports[`build simple: rollup es 2`] = `
Object {
  "fileName": "index.css",
  "name": undefined,
  "source": "/**
 * @see https://developers.google.com/fonts/docs/getting_started
 */
@font-face {
  font-family: 'Tangerine';
  font-style: normal;
  font-weight: 400;
  src: local('Tangerine Regular'), local('Tangerine-Regular'), url(\\"../assets/font/tangerine.woff2\\") format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
.ghc-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 300px;
  height: 450px;
  margin: auto;
  background-image: url(\\"../assets/image/background.jpeg\\");
  background-size: contain;
  background-repeat: no-repeat;
}
.ghc-container .ghc-name {
  flex: 1 1;
  font-family: 'Tangerine', 'Comic Sans', serif;
  font-size: 48px;
  text-shadow: 4px 4px 4px #1a1a1a;
  color: #1a1a1a;
  padding: 1rem 2rem;
  white-space: nowrap;
}
.ghc-container .ghc-name ::-moz-placeholder {
  color: #808080;
}
.ghc-container .ghc-name ::placeholder {
  color: #808080;
}
",
  "type": "asset",
}
`;

exports[`build simple: rollup es 3`] = `
"import React from 'react';

/**
 * Params for constructing a Greet.
 */
interface GreetProps {
    name?: string;
}
declare function Greet(props: GreetProps): React.ReactElement;

declare const _default: () => JSX.Element;

export { Greet, GreetProps, _default as default };
"
`;

exports[`build simple: rollup undefined 1`] = `
"function styleInject(css, ref) {
  if ( ref === void 0 ) ref = {};
  var insertAt = ref.insertAt;

  if (!css || typeof document === 'undefined') { return; }

  var head = document.head || document.getElementsByTagName('head')[0];
  var style = document.createElement('style');
  style.type = 'text/css';

  if (insertAt === 'top') {
    if (head.firstChild) {
      head.insertBefore(style, head.firstChild);
    } else {
      head.appendChild(style);
    }
  } else {
    head.appendChild(style);
  }

  if (style.styleSheet) {
    style.styleSheet.cssText = css;
  } else {
    style.appendChild(document.createTextNode(css));
  }
}

var css_248z = \\"/**\\\\n * @see https://developers.google.com/fonts/docs/getting_started\\\\n */\\\\n@font-face {\\\\n  font-family: 'Tangerine';\\\\n  font-style: normal;\\\\n  font-weight: 400;\\\\n  src: local('Tangerine Regular'), local('Tangerine-Regular'), url(\\\\\\"../../lib/assets/font/tangerine.woff2\\\\\\") format('woff2');\\\\n  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;\\\\n}\\\\n.ghc-container {\\\\n  display: flex;\\\\n  align-items: center;\\\\n  justify-content: center;\\\\n  width: 300px;\\\\n  height: 450px;\\\\n  margin: auto;\\\\n  background-image: url(\\\\\\"../../lib/assets/image/background.jpeg\\\\\\");\\\\n  background-size: contain;\\\\n  background-repeat: no-repeat;\\\\n}\\\\n.ghc-container .ghc-name {\\\\n  flex: 1;\\\\n  font-family: 'Tangerine', 'Comic Sans', serif;\\\\n  font-size: 48px;\\\\n  text-shadow: 4px 4px 4px #1a1a1a;\\\\n  color: #1a1a1a;\\\\n  padding: 1rem 2rem;\\\\n  white-space: nowrap;\\\\n}\\\\n.ghc-container .ghc-name ::placeholder {\\\\n  color: #808080;\\\\n}\\\\n\\";
styleInject(css_248z);
"
`;
